2.1-beta 3
===========
- added an optional timeout parameter for the socket connect function i.e.:
  $socket = connect("host", port, [timeout in milliseconds]) 
  default is 60 seconds.
- modified listen to create bind to the specified port, each call to listen
  is a call to accept a connection on the specified port.  to stop listening
  on the specified port use closef(port number) instead of $handle.
- added a function global to declare a series of variables into the global 
  scope
- added a require strict debug flag, this flag causes a runtime warning to
  be fired whenever a script uses a variable without delcaring it using
  global, local, or this.
- added &debug(mode) allows scripters to programatically set the debug flags
  for their script..  debug with no arguments returns the current debug flags

  levels are:
  1 - show errors: dump all critical script errors as runtime warnings, this
      should never be turned off.
  2 - show warnings: dump all non-critical script exceptions as runtime 
      warnings.  These can be checked for programatically with &checkError
  4 - require strict: dump all first time uses of non-declared variables as
      runtime warnings.  

  any of these flags can be OR'd together i.e.:

  debug(1 | 4); # show all errors and uses of non-declared variables

2.1-beta 2
===========
- added a few more FP-style functions to Sleep:
  &reduce(&closure, @array)
  &search(@array, &closure, [index])
  &filter(@array, &closure)
- added &replaceAt("original", "new", index, [chars to delete]);
- added &mid("string", index, n chars) to extract a substring equivalent to 
  &substr("string", index, index + n chars) 
- exposed the IO Process, File, and Socket using a new method added to 
  IOObject: getSource().  This will allow scripters to query the IO source 
  using HOES if there is some API Sleep does not bridge. (i.e. exit value of a
  process)
- added an API to SleepUtils for building an IO handle scalar from a Java 